<resources>
    <string name="app_name">SnapItText</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Please enter valid email and/or password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="hintRepeatNewPassword">Repeat New Password</string>
    <string name="title_activity_profile">SnapItChat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hintNewEmail">New Email</string>
    <string name="hintNewPassword">New Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register in SnapItChat now!</string>
    <string name="btn_link_to_login">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hintRepeatNewEmail">Repeat New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered Email</string>
    <string name="pic_desc">Picture description</string>
    <string name="homeView">Home</string>
    <string name="topicView">New Topic</string>
    <string name="settingsView">Settings</string>
    <string name="messageInput">Write a message...</string>
    <string name="profilePicture">Profile picture</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="facebook_app_id">418745205144451</string>
    <string name="fb_login_protocol_scheme">fb418745205144451</string>
    <string name="username">USERNAME</string>
    <string name="btnProfilePic">Change Profile Picture</string>
    <string name="newTopicInfo">Create a topic by choosing name and a picture!</string>
    <string name="homeInfo">Choose a topic to join or create your own!</string>
    <string name="newTopicPicText">Topic picture</string>
    <string name="newTopicPicture">New Topic Picture</string>
    <string name="hintNewTopic">Topic Name</string>
    <string name="btnTopicPicture">CHOOSE TOPIC PICTURE</string>
    <string name="btnCreateTopic">CREATE NEW TOPIC</string>
    <string name="backButton"><![CDATA[<]]></string>
</resources>
