<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary">

            <com.facebook.login.widget.ProfilePictureView
                android:id="@+id/fbProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                design:srcCompat="@drawable/no_image"
                android:contentDescription="@string/profilePicture"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/newEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

            <EditText
                android:id="@+id/repeatNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintRepeatNewEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hintNewPassword"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

            <EditText
                android:id="@+id/repeatNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hintRepeatNewPassword"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

            <Button
                android:id="@+id/changeEmail"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_change"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/changePass"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_change"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/send"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_send"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/removeUser"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/red"
                android:text="@string/btn_remove"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/changeProfilePicture"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btnProfilePic"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/showChangeEmailButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_email"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/showChangePasswordButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_password"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/passwordResetEmailButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_password_reset_email"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/removeUserButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remove_user"
                android:textStyle="bold"
                android:background="@color/red"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/signOut"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_sign_out"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <FrameLayout
        android:id="@+id/frameSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            design:menu="@menu/menu_navigation"
            android:background="@color/colorAccent"
            design:itemTextColor="@android:color/black"
            design:itemIconTint="@android:color/black" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shadow"
        android:layout_above="@id/frameSettings"/>

</RelativeLayout>
